<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dca.sejong.common.dialog.PermissionDialog"
    android:background="#00000000">

    <com.ssomai.android.scalablelayout.ScalableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:scale_base_height="192"
        app:scale_base_width="108">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/dialog_common_background"
            app:scale_height="140"
            app:scale_width="94" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_icon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/icon_notice02"
            app:scale_height="16"
            app:scale_left="13"
            app:scale_top="31"
            app:scale_width="16" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/str_permission_title"
            android:textColor="@color/color_dialog_title"
            android:textStyle="bold"
            app:scale_height="16"
            app:scale_left="32"
            app:scale_textsize="4.5"
            app:scale_top="31"
            app:scale_width="67" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFDDDDDD"
            app:scale_height="0.3"
            app:scale_left="12"
            app:scale_top="52"
            app:scale_width="84" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/str_permission_content"
            android:textColor="@color/color_dialog_content"
            android:textStyle="bold"
            app:scale_height="16"
            app:scale_left="13"
            app:scale_textsize="3.3"
            app:scale_top="54"
            app:scale_width="83" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_optinal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/str_permission_optional"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:scale_height="9"
            app:scale_left="13"
            app:scale_textsize="4"
            app:scale_top="71"
            app:scale_width="83" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/dialog_permission_box"
            app:scale_width="82"
            app:scale_height="20"
            app:scale_left="13"
            app:scale_top="80"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_icon_alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_access_notice"
            app:scale_width="11"
            app:scale_height="11"
            app:scale_left="17"
            app:scale_top="85"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_alarm_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/str_permission_alarm_title"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:scale_textsize="3.3"
            app:scale_height="9"
            app:scale_left="32"
            app:scale_top="82"
            app:scale_width="60" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_alarm_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/str_permission_alarm_content"
            android:textColor="@color/color_dialog_content"
            android:textStyle="bold"
            app:scale_textsize="3.3"
            app:scale_height="9"
            app:scale_left="32"
            app:scale_top="89.5"
            app:scale_width="60" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/dialog_permission_box"
            app:scale_width="82"
            app:scale_height="20"
            app:scale_left="13"
            app:scale_top="103"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_icon_tel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_access_call"
            app:scale_width="11"
            app:scale_height="11"
            app:scale_left="17"
            app:scale_top="108"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_tel_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/str_permission_tel_title"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:scale_textsize="3.3"
            app:scale_height="9"
            app:scale_left="32"
            app:scale_top="105"
            app:scale_width="60" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_tel_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/str_permission_tel_content"
            android:textColor="@color/color_dialog_content"
            android:textStyle="bold"
            app:scale_textsize="3.3"
            app:scale_height="9"
            app:scale_left="32"
            app:scale_top="112.5"
            app:scale_width="60" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/dialog_permission_box"
            app:scale_width="82"
            app:scale_height="20"
            app:scale_left="13"
            app:scale_top="126"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_icon_cam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_access_camera"
            app:scale_width="11"
            app:scale_height="11"
            app:scale_left="17"
            app:scale_top="131"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_cam_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/str_permission_camera_title"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:scale_textsize="3.3"
            app:scale_height="9"
            app:scale_left="32"
            app:scale_top="128"
            app:scale_width="60" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_cam_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/str_permission_camera_content"
            android:textColor="@color/color_dialog_content"
            android:textStyle="bold"
            app:scale_textsize="3.3"
            app:scale_height="9"
            app:scale_left="32"
            app:scale_top="135.5"
            app:scale_width="60" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/dialog_permission_bottom_box"
            app:scale_width="94"
            app:scale_height="13"
            app:scale_left="7"
            app:scale_top="153"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:scale_width="94"
            app:scale_height="13"
            app:scale_left="7"
            app:scale_top="153"
            app:scale_textsize="4.5"/>

    </com.ssomai.android.scalablelayout.ScalableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>